# tokenspan

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  generate-graphql.sh  graphql.config.yml
tokenspan-api/: Cargo.toml
tokenspan-api/config/: default.toml  development.toml
tokenspan-api/entity/: Cargo.toml
tokenspan-api/entity/src/: api_key.rs  execution.rs  lib.rs  message.rs  model.rs  parameter.rs  prelude.rs  provider.rs  sea_orm_active_enums.rs  task.rs  task_version.rs  user.rs
tokenspan-api/examples/: http-client.env.json
tokenspan-api/examples/graphql/: api-key.http  auth.http  function.http  message.http  model.http  provider.http  task.http  task_version.http  thread-version.http  thread.http
tokenspan-api/examples/graphql/api-keys/: get-api-keys.graphql
tokenspan-api/examples/rest/: task-execute.http  thread-execute.http
tokenspan-api/migration/: Cargo.toml
tokenspan-api/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20231216_063415_create_provider_table.rs  m20231216_064026_create_model_table.rs  m20231216_070209_create_api_key_table.rs  m20231216_070852_create_task_table.rs  m20231216_072112_create_task_version_table.rs  m20231216_072606_create_parameter_table.rs  m20231216_073039_create_message_table.rs  m20231216_073624_create_execution_table.rs
tokenspan-api/migrations/: 20231219150003_create_user_table.down.sql  20231219150003_create_user_table.up.sql  20231223094451_create_provider_table.down.sql  20231223094451_create_provider_table.up.sql  20231224031056_create_model_table.down.sql  20231226134531_create_api_key_table.down.sql  20231226135530_create_task_version_table.down.sql  20231226135530_create_task_version_table.up.sql  20231226135908_create_parameter_table.down.sql  20231226140037_create_execution_table.down.sql  20231226140037_create_execution_table.up.sql  V10__create_function_table.sql  V1__create_user_table.sql  V2__create_provider_table.sql  V3__create_model_table.sql  V3__create_model_table.up.sql  V4__create_api_key_table.sql  V5__create_task_table.sql  V5__create_thread_table.sql  V6__create_task_version_table.sql  V6__create_thread_version_table.sql  V7__create_parameter_table.sql  V7__create_parameter_table.up.sql  V8__create_execution_table.sql  V9__create_message_table.sql
tokenspan-api/prisma/: schema.prisma
tokenspan-api/src/: app.rs  configs.rs  db.rs  graphql.rs  lib.rs  main.rs  repository.rs  state.rs
tokenspan-api/src/api/: mod.rs
tokenspan-api/src/api/api_key/: api_key_cache.rs  api_key_error.rs  api_key_loader.rs  api_key_model.rs  api_key_mutation.rs  api_key_query.rs  api_key_repository.rs  api_key_service.rs  mod.rs
tokenspan-api/src/api/auth/: auth_error.rs  auth_model.rs  auth_mutation.rs  auth_query.rs  auth_service.rs  mod.rs
tokenspan-api/src/api/execution/: execution_error.rs  execution_loader.rs  execution_model.rs  execution_query.rs  execution_repository.rs  execution_service.rs  execution_type.rs  mod.rs
tokenspan-api/src/api/execution_history/: execution_history_error.rs  execution_history_loader.rs  execution_history_model.rs  execution_history_query.rs  execution_history_service.rs  mod.rs
tokenspan-api/src/api/function/: function_model.rs  function_mutation.rs  function_query.rs  function_service.rs
tokenspan-api/src/api/health/: health_handler.rs
tokenspan-api/src/api/message/: message_error.rs  message_model.rs  message_mutation.rs  message_query.rs  message_service.rs  mod.rs
tokenspan-api/src/api/model/: mod.rs  model_cache.rs  model_error.rs  model_loader.rs  model_model.rs  model_mutation.rs  model_query.rs  model_repository.rs  model_service.rs
tokenspan-api/src/api/parameter/: mod.rs  parameter_error.rs  parameter_loader.rs  parameter_model.rs  parameter_mutation.rs  parameter_query.rs  parameter_repository.rs  parameter_service.rs
tokenspan-api/src/api/provider/: mod.rs  provider_error.rs  provider_loader.rs  provider_model.rs  provider_mutation.rs  provider_query.rs  provider_repository.rs  provider_service.rs
tokenspan-api/src/api/task/: mod.rs  task_error.rs  task_handler.rs  task_loader.rs  task_model.rs  task_mutation.rs  task_query.rs  task_repository.rs  task_service.rs  task_subscription.rs
tokenspan-api/src/api/task_version/: mod.rs  task_version_error.rs  task_version_loader.rs  task_version_model.rs  task_version_mutation.rs  task_version_query.rs  task_version_repository.rs  task_version_service.rs
tokenspan-api/src/api/thread/: mod.rs  thread_handler.rs  (+6 more)
tokenspan-api/src/domains/: cache.rs  mod.rs
tokenspan-api/src/error/: mod.rs
tokenspan-api/src/extractor/: mod.rs  valid_json.rs  valid_json_extractor.rs  valid_query.rs  valid_query_extractor.rs
tokenspan-api/src/extractors/: valid_json.rs  valid_query.rs
tokenspan-api/src/guard/: mod.rs
tokenspan-api/src/guards/: mod.rs
tokenspan-api/src/loader/: mod.rs
tokenspan-api/src/prisma/: mod.rs
tokenspan-api/src/prompt/: mod.rs
tokenspan-api/src/prompts/: mod.rs
tokenspan-api/src/repository/: mod.rs
tokenspan-api/src/version/: mod.rs
tokenspan-api/tests/: test_api_key.rs  test_function.rs  test_health.rs  test_model.rs  test_provider.rs  test_sign_in.rs  test_sign_up.rs  test_thread.rs  test_thread_execute.rs  test_thread_version.rs
tokenspan-api/tests/common/: mod.rs
tokenspan-api/tests/graphql/: api-key.graphql  auth.graphql  function.graphql  generated.rs  model.graphql  provider.graphql  sign-in.graphql  sign-up.graphql  thread-version.graphql  thread.graphql
tokenspan-cli/: Cargo.toml
tokenspan-cli/src/: main.rs
tokenspan-cli/src/seed/: function_seed.rs  mod.rs  model_seed.rs  provider_seed.rs  task_seed.rs  thread_seed.rs  user_seed.rs
tokenspan-extra/: Cargo.toml
tokenspan-extra/src/: lib.rs
tokenspan-extra/src/pagination/: mod.rs
tokenspan-macros/: Cargo.toml
tokenspan-macros/src/: derive_struct_fields.rs  lib.rs
tokenspan-macros/tests/: test_field_names.rs
tokenspan-sdk/: Cargo.toml
tokenspan-sdk/src/: lib.rs
tokenspan-utils/: Cargo.toml
tokenspan-utils/src/pagination/: mod.rs
(+225 files in other folders)
