[package]
name = "tokenspan-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-graphql = { git = "https://github.com/linrium/async-graphql", branch = "support-axum-0.7-custom", features = ["tokio", "chrono", "dataloader", "tracing", "uuid"] }
async-graphql-axum = { git = "https://github.com/linrium/async-graphql", branch = "support-axum-0.7-custom" }
async-openai = "0.17.1"
async-stream = "0.3.5"
async-trait = "0.1.75"
axum = { git = "https://github.com/linrium/axum", branch = "feat/support-custom-sse-event", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
axum-macros = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.1"
data-encoding = "2.4.0"
dotenv = "0.15.0"
futures = "0.3"
futures-util = "0.3.29"
jsonwebtoken = "9"
magic-crypt = "3.1.13"
openssl = { version = "0.10.59", features = ["vendored"] }
regex = "1.10.2"
ring = "0.17.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
strum = "0.25"
strum_macros = "0.25"
thiserror = "1.0.50"
tokenspan-extra = { path = "../tokenspan-extra" }
tokenspan-macros = { path = "../tokenspan-macros" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["trace", "timeout", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
uuid = { version = "1.6.1", features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }
typed-builder = "0.18.0"
dojo-orm = { path = "../../dojo-orm/dojo-orm" }
dojo-macros = { path = "../../dojo-orm/dojo-macros" }
refinery = { version = "0.8.11", features = ["tokio-postgres"] }

[dependencies.tokio-postgres]
version = "0.7.2"
features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "array-impls"
]
