[package]
name = "tokenspan-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
config = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
comfy-table = "7.1.0"
indicatif = "0.17.7"
glob = "0.3.1"
anyhow = "1.0.75"
async-trait = "0.1.74"

tokenspan-api = { path = "../tokenspan-api" }
console = "0.15.7"

[lints]
workspace = true
