[package]
name = "tokenspan-extra"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { git = "https://github.com/linrium/async-graphql", branch = "support-axum-0.7-custom", features = ["tokio", "chrono", "dataloader", "tracing"] }
bson = { version = "2.0", features = ["chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
base64ct = { version = "1.6.0", features = ["alloc"] }
thiserror = "1.0.50"

[lints]
workspace = true
