[package]
name = "tokenspan-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
async-graphql = { git = "https://github.com/linrium/async-graphql", branch = "support-axum-0.7", features = ["tokio", "chrono", "dataloader", "tracing"] }
bson = { version = "2.0" }
anyhow = "1.0.75"
serde = { version = "1.0" }
tokenspan-utils = { path = "../tokenspan-utils" }

[lints]
workspace = true
