[package]
name = "tokenspan-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
openai_api_rust = "0.1.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
