[package]
name = "tokenspan-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.17.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
futures = "0.3"

[lints]
workspace = true
